--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,14 +35,14 @@ input {
 
 # General
 general {
-    gaps_in = 2
-    gaps_out = 4
+    gaps_in = 3
+    gaps_out = 6
     border_size = 2
     col.active_border = rgba(98c379dd) rgba(7dac5b66) 45deg
     col.inactive_border = rgba(98c37933)
     layout = dwindle
     allow_tearing = false
-    no_border_on_floating = true
+    no_border_on_floating = false
 }
 
 decoration {
@@ -50,7 +50,7 @@ decoration {
         blur {
         enabled = true
         size = 5
-        passes = 2
+        passes = 1
         new_optimizations = on
         ignore_opacity = true
         xray = true
@@ -80,7 +80,7 @@ workspace= 10 ,monitor:HDMI-A-1
 
 # Animations
 animations {
-    first_launch_animation = false
+    first_launch_animation = true
     enabled = true
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 7, myBezier
@@ -128,12 +128,15 @@ $captureScreen = ~/.config/hypr/scripts/grim/captureScreen.sh
 $captureAll = ~/.config/hypr/scripts/grim/captureAll.sh
 
 # Window rules
-windowrulev2 = move 1635 45, pin, title: (Audacious)$
-windowrulev2 = move 1635 166, class: (audacious), title: (Zobrazit editor seznamu skladeb)$
-windowrulev2 = move 1635 166, class: (audacious), title: (Ekvalizér)$
-windowrulev2 = float, class: (audacious), title: (Nastavení Audacious)$
+windowrulev2 = move 1630 50, pin, title: (Audacious)$
+windowrulev2 = move 1630 167, class: (audacious), title: (Zobrazit editor seznamu skladeb)$
+windowrulev2 = move 1630 167, class: (audacious), title: (Ekvalizér)$
+windowrulev2 = float, class: (audacious)
 windowrulev2 = float, class: (transmission-qt), title: (Transmission)$
 windowrulev2 = float, class: (pavucontrol)
+windowrulev2 = float, class: (thunar)
+windowrulev2 = float, class: (xarchiver)
+windowrulev2 = float, class: (mpv)
 
 # Super Key bindings
 $mainMod = SUPER
