--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -20,12 +20,12 @@ keyboard_scheme=2
 menus_have_icons=true
 show_shortcuts_in_context_menus=true
 stylesheets=@Invalid()
-toolbutton_style=4
+toolbutton_style=3
 underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\as\0\0\x4\t\0\0\0\0\0\0\0\0\0\0\a\x7f\0\0\x4\x37\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\as\0\0\x4\t)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xb5\0\0\x4\t\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x4\x15\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xb5\0\0\x4\t)
 
 [Troubleshooting]
 force_raster_widgets=1
