--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -33,14 +33,35 @@
     },
     "sway/mode": {},
     "tray": {
-        "icon-size": 24,
+        "icon-size": 16,
         "spacing": 5
     },
     "clock": {
-        "tooltip-format": "{calendar}",
-        "format": " {:%H:%M}",
+        "tooltip-format": "<span size='10pt'>{calendar}</span>",
+        "format": " {:%H:%M:%S}",
         "format-alt": " {:%d.%m.%Y}",
-        "interval": 1
+        "interval": 1,
+        "calendar": {
+            "mode"          : "month",
+            "mode-mon-col"  : 3,
+            "weeks-pos"     : "left",
+            "on-scroll"     : 1,
+            "on-click-right": "mode",
+            "format": {
+                "months":     "<span color='#ffffff'><b>{}</b></span>",
+                "days":       "<span color='#abb2bf'><b>{}</b></span>",
+                "weeks":      "<span color='#0087bd'><b>T{}</b></span>",
+                "weekdays":   "<span color='#d19a66'><b>{}</b></span>",
+                "today":      "<span color='#e06c75'><b>{}</b></span>"
+            }
+        },
+        "actions": {
+            "on-click-right": "mode",
+            "on-click-forward": "tz_up",
+            "on-click-backward": "tz_down",
+            "on-scroll-up": "shift_up",
+            "on-scroll-down": "shift_down"
+        }
     },
     "disk": {
         "interval": 30,
