--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,15 +42,15 @@ general {
     col.inactive_border = rgba(98c37933)
     layout = dwindle
     allow_tearing = false
-    no_border_on_floating = false
+    no_border_on_floating = true
 }
 
 decoration {
     rounding = 0
         blur {
         enabled = true
-        size = 5
-        passes = 1
+        size = 2
+        passes = 3
         new_optimizations = on
         ignore_opacity = true
         xray = true
