--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -77,7 +77,7 @@ sub-ass-vsfilter-blur-compat=no
 sub-ass-vsfilter-aspect-compat=no
 sub-font="Roboto Condensed"
 sub-font-size=45
-sub-color='#d19a66'
+sub-color='#ffcb0e'
 sub-border-color='#222222'
 sub-border-size=2
 sub-shadow-offset=2
