--- a/.config/QtProject.conf
+++ b/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/realist/Videos, file:///home/realist/Music, file:///home/realist/Downloads, file:///home/realist/Downloads/Torrents, file:///home/realist/Pictures, file:///home/realist/Music/Sia - Reasonable Woman (2024)
-lastVisited=file:///home/realist/Music/Sia - Reasonable Woman (2024)
+history=file:///home/realist/Music/Sia - Reasonable Woman (2024), file:///home/realist, file:///home/realist/.VirtualBox, file:///home/realist/.VirtualBox/Machines/Installer, file:///home/realist/Downloads/Torrents
+lastVisited=file:///home/realist/Downloads/Torrents
 qtVersion=5.15.14
 shortcuts=file:, file:///home/realist
 sidebarWidth=118
