--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -157,7 +157,7 @@ bind = $mainMod, T, togglefloating
 
 bind = $mainMod ALT, A, exec, $captureArea
 bind = $mainMod ALT, S, exec, $captureScreen
-bind = $mainMod, S, exec, $captureAll
+bind = $mainMod ALT, M, exec, $captureAll
 
 bind = $mainMod, J, togglesplit
 bind = $mainMod, left, movefocus, l
