--- a/.config/QtProject.conf
+++ b/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/realist/Music/Sia - Reasonable Woman (2024), file:///home/realist, file:///home/realist/.VirtualBox, file:///home/realist/.VirtualBox/Machines/Installer, file:///home/realist/Downloads/Torrents
-lastVisited=file:///home/realist/Downloads/Torrents
+history=file:///home/realist/Music/Sia - Reasonable Woman (2024), file:///home/realist, file:///home/realist/.VirtualBox, file:///home/realist/.VirtualBox/Machines/Installer, file:///home/realist/Downloads/Torrents, file:///home/realist/.VirtualBox/Machines/RHMD
+lastVisited=file:///home/realist/.VirtualBox/Machines/RHMD
 qtVersion=5.15.14
 shortcuts=file:, file:///home/realist
 sidebarWidth=118
