--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -137,6 +137,7 @@ windowrulev2 = float, class: (pavucontrol)
 windowrulev2 = float, class: (thunar)
 windowrulev2 = float, class: (xarchiver)
 windowrulev2 = float, class: (mpv)
+windowrulev2 = float, class: (ristretto)
 
 # Super Key bindings
 $mainMod = SUPER
