--- a/.config/pcmanfm-qt/default/settings.conf
+++ b/.config/pcmanfm-qt/default/settings.conf
@@ -81,7 +81,7 @@ Archiver=xarchiver
 FallbackIconThemeName=oxygen
 OnlyUserTemplates=false
 SIUnit=false
-SuCommand=sudo su %s
+SuCommand=lxsudo %s
 TemplateRunApp=false
 TemplateTypeOnce=true
 Terminal=kitty
@@ -102,9 +102,9 @@ MountRemovable=true
 AlwaysShowTabs=true
 FixedHeight=480
 FixedWidth=640
-LastWindowHeight=1046
+LastWindowHeight=1080
 LastWindowMaximized=true
-LastWindowWidth=960
+LastWindowWidth=1920
 PathBarButtons=true
 RememberWindowSize=true
 ReopenLastTabs=false
