--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -1,5 +1,5 @@
 Net/ThemeName "Adwaita-dark"
-Net/IconThemeName "Faenza-Darkest"
+Net/IconThemeName "elementary-xfce-darker"
 Gtk/CursorThemeName "DMZ-White"
 Net/EnableEventSounds 1
 EnableInputFeedbackSounds 1
