--- a/.config/pcmanfm/default/pcmanfm.conf
+++ b/.config/pcmanfm/default/pcmanfm.conf
@@ -23,6 +23,6 @@ view_mode=icon
 show_hidden=0
 sort=name;ascending;
 columns=name:200;desc:131;size:106;mtime:149;
-toolbar=newtab;navigation;home;
+toolbar=newwin;newtab;navigation;home;
 show_statusbar=1
 pathbar_mode_buttons=0
