--- a/.config/QtProject.conf
+++ b/.config/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///home/realist/.VirtualBox/Machines/Installer, file:///home/realist/Downloads/Torrents, file:///home/realist/.VirtualBox/Machines/RHMD, file:///home/realist/Videos/Jack_Reacher, file:///home/realist/Pictures
-lastVisited=file:///home/realist/Videos/Jack_Reacher
+history=file:///home/realist/Videos/Jack_Reacher, file:///home/realist/Pictures, file:///home/realist/Downloads/Isos, file:///home/realist/Music/Alexandra Ilieva - Saxophone Covers, file:///home/realist/Downloads/Torrents
+lastVisited=file:///home/realist/Music/Alexandra Ilieva - Saxophone Covers
 qtVersion=5.15.14
 shortcuts=file:, file:///home/realist
 sidebarWidth=118
 treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x3\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2i\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1J\0\0\0\x1\0\0\0\0\0\0\0J\0\0\0\x1\0\0\0\0\0\0\0O\0\0\0\x1\0\0\0\0\0\0\0\x86\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
-viewMode=Detail
+viewMode=List
