--- a/.config/audacious/config
+++ b/.config/audacious/config
@@ -2,13 +2,14 @@
 [audacious]
 advance_on_delete=TRUE
 generic_title_format=${title}
+show_interface=FALSE
 
 [audgui]
-filesel_path=/home/realist
+filesel_path=/home/realist/Music/Alexandra Ilieva - Saxophone Covers
 
 [pipewire]
-volume_left=42
-volume_right=42
+volume_left=22
+volume_right=22
 
 [qtui]
 column_widths=25,25,275,213,50,110,175,25,100,59,75,275,275,275,75,275,175
@@ -17,11 +18,11 @@ player_width=948
 playlist_columns=playing track artist album title length
 
 [skins]
-equalizer_x=1920
+equalizer_x=0
 equalizer_y=0
 mainwin_font=JetBrainsMono Nerd Font Mono 7
 mainwin_use_bitmapfont=FALSE
-player_x=0
+player_x=1920
 player_y=0
 playlist_font=JetBrainsMono Nerd Font Mono 7
 playlist_height=899
