--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -151,7 +151,7 @@ bind = $mainMod SHIFT, C, killactive
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, exec, $fileManager
 
-bind = $mainMod SHIFT, RETURN, exec, launcher
+bind = $mainMod SHIFT, RETURN, exec, rofi -show drun
 
 bind = $mainMod, SPACE, fullscreen
 bind = $mainMod, T, togglefloating
