--- a/.config/pcmanfm/default/pcmanfm.conf
+++ b/.config/pcmanfm/default/pcmanfm.conf
@@ -22,7 +22,7 @@ side_pane_mode=places
 view_mode=icon
 show_hidden=0
 sort=name;ascending;
-columns=name:200;desc:131;size:106;mtime:149;
+columns=name:200;desc;size:117;mtime:1106;
 toolbar=newwin;newtab;navigation;home;
 show_statusbar=1
 pathbar_mode_buttons=0
