--- a/.config/audacious/config
+++ b/.config/audacious/config
@@ -5,11 +5,11 @@ generic_title_format=${title}
 show_interface=FALSE
 
 [audgui]
-filesel_path=/home/realist/Music/Alexandra Ilieva - Saxophone Covers
+filesel_path=/home/realist/Music/Wohnout
 
 [pipewire]
-volume_left=22
-volume_right=22
+volume_left=27
+volume_right=27
 
 [qtui]
 column_widths=25,25,275,213,50,110,175,25,100,59,75,275,275,275,75,275,175
@@ -26,6 +26,7 @@ player_x=1920
 player_y=0
 playlist_font=JetBrainsMono Nerd Font Mono 7
 playlist_height=899
+playlist_visible=TRUE
 playlist_x=1920
 playlist_y=0
 skin=/home/realist/.local/share/audacious/Skins/Nucleo.wsz
