--- a/.config/QtProject.conf
+++ b/.config/QtProject.conf
@@ -1,5 +1,5 @@
 [FileDialog]
-history=file:///home/realist/Music/Alexandra Ilieva - Saxophone Covers, file:///home/realist/Downloads/Torrents, file:///home/realist/Music, file:///home/realist, file:///home/realist/Music/Wohnout/2006 - Polib si d\x11b\x64u
+history=file:///home/realist/Downloads/Torrents, file:///home/realist/Music, file:///home/realist, file:///home/realist/Music/Wohnout/2006 - Polib si d\x11b\x64u, file:///home/realist/Downloads/Isos
 lastVisited=file:///home/realist/Downloads/Torrents
 qtVersion=5.15.14
 shortcuts=file:, file:///home/realist
