--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -11,6 +11,7 @@
     "modules-center": [],
     "modules-right": [
         "network",
+        "temperature",
         "cpu",
         "memory",
         "disk",
@@ -20,6 +21,7 @@
         "keyboard-state",
         "custom/powermenu"
     ],
+    "sway/mode": {},
     "hyprland/workspaces": {
         "all-outputs": false,
         "persistent_workspaces": {
@@ -27,11 +29,10 @@
         }
     },
     "custom/powermenu": {
-        "format": " ",
+        "format": "  ",
         "on-click": "wlogout",
         "tooltip": false
     },
-    "sway/mode": {},
     "tray": {
         "icon-size": 20,
         "spacing": 5
@@ -42,17 +43,17 @@
         "format-alt": " {:%d.%m.%Y}",
         "interval": 1,
         "calendar": {
-            "mode"          : "month",
-            "mode-mon-col"  : 3,
-            "weeks-pos"     : "left",
-            "on-scroll"     : 1,
+            "mode": "month",
+            "mode-mon-col": 3,
+            "weeks-pos": "left",
+            "on-scroll": 1,
             "on-click-right": "mode",
             "format": {
-                "months":     "<span color='#ffffff'><b>{}</b></span>",
-                "days":       "<span color='#abb2bf'><b>{}</b></span>",
-                "weeks":      "<span color='#0087bd'><b>T{}</b></span>",
-                "weekdays":   "<span color='#d19a66'><b>{}</b></span>",
-                "today":      "<span color='#e06c75'><b>{}</b></span>"
+                "months": "<span color='#ffffff'><b>{}</b></span>",
+                "days": "<span color='#abb2bf'><b>{}</b></span>",
+                "weeks": "<span color='#0087bd'><b>T{}</b></span>",
+                "weekdays": "<span color='#d19a66'><b>{}</b></span>",
+                "today": "<span color='#e06c75'><b>{}</b></span>"
             }
         },
         "actions": {
@@ -68,13 +69,31 @@
         "format": "󰋊 HDD:{free}",
         "unit": "GB"
     },
+    "temperature": {
+        "thermal-zone": 2,
+        "hwmon-path": [
+            "/sys/class/hwmon/hwmon2/temp1_input",
+        ],
+        "critical-threshold": 80,
+        "format-critical": " CPU:{temperatureC}°C",
+        "format": " CPU:{temperatureC}°C"
+    },
     "cpu": {
         "format": " CPU:{usage}%",
         "tooltip": false,
-	"interval": 1,
-	"format-alt-click": "click",
-        "format-alt": " CPU:{icon0}{icon1}{icon2}{icon3}{icon4}{icon5} {usage}%",
-	"format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"],
+        "interval": 1,
+        "format-alt-click": "click",
+        "format-alt": " {icon0}{icon1}{icon2}{icon3}{icon4}{icon5}",
+        "format-icons": [
+            "▁",
+            "▂",
+            "▃",
+            "▄",
+            "▅",
+            "▆",
+            "▇",
+            "█"
+        ],
     },
     "memory": {
         "format": "󰍛 RAM:{}%",
