--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -152,6 +152,7 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, exec, $fileManager
 
 bind = $mainMod SHIFT, RETURN, exec, rofi -show drun
+bind = $mainMod SHIFT, BACKSPACE, exec, rofi -show filebrowser
 
 bind = $mainMod, SPACE, fullscreen
 bind = $mainMod, T, togglefloating
