--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,18 @@
 /.wine
 .wine
 /.local/share/applications
+.config/audacious/playlists/1002.audpl
+.config/audacious/playlists/1003.audpl
+.config/audacious/playlists/1004.audpl
+.config/audacious/playlists/1005.audpl
+.config/audacious/playlists/1006.audpl
+.config/audacious/playlists/1007.audpl
+.config/audacious/playlists/1002.audpl
+.config/audacious/playlists/1003.audpl
+/.config/GIMP
+/.config/psysh
+playlists
+/Tutorials
+.config/gtk-3.0/bookmarks
+.config/audacious/playlists/1002.audpl
+.config/audacious/playlists/1003.audpl
