--- a/.config/QtProject.conf
+++ b/.config/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///home/realist/Downloads/Torrents, file:///home/realist/Music, file:///home/realist, file:///home/realist/Music/Wohnout/2006 - Polib si d\x11b\x64u, file:///home/realist/Downloads/Isos
-lastVisited=file:///home/realist/Downloads/Torrents
+history=file:///home/realist/Music/Daft_Punk-Tron_Legacy_(Original_Motion_Picture_Soundtrack)-OST-2010, file:///home/realist/Music/Death/IndividualThoughtPatterns, file:///home/realist/Music/Depeche Mode - Music For The Masses (1987) (MUTE INT 846.833) (1st Germany 1987), file:///home/realist/Music/Death/Human, file:///home/realist/Pictures, file:///home/realist/Music/Amorphis/Skyforger
+lastVisited=file:///home/realist/Music/Amorphis/Skyforger
 qtVersion=5.15.14
 shortcuts=file:, file:///home/realist
 sidebarWidth=118
-treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2i\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1J\0\0\0\x1\0\0\0\0\0\0\0J\0\0\0\x1\0\0\0\0\0\0\0O\0\0\0\x1\0\0\0\0\0\0\0\x86\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
+treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x3\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2i\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1J\0\0\0\x1\0\0\0\0\0\0\0J\0\0\0\x1\0\0\0\0\0\0\0O\0\0\0\x1\0\0\0\0\0\0\0\x86\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 viewMode=Detail
