--- a/.config/QtProject.conf
+++ b/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/realist/Music/Daft_Punk-Tron_Legacy_(Original_Motion_Picture_Soundtrack)-OST-2010, file:///home/realist/Music/Death/IndividualThoughtPatterns, file:///home/realist/Music/Depeche Mode - Music For The Masses (1987) (MUTE INT 846.833) (1st Germany 1987), file:///home/realist/Music/Death/Human, file:///home/realist/Pictures, file:///home/realist/Music/Amorphis/Skyforger
-lastVisited=file:///home/realist/Music/Amorphis/Skyforger
+history=file:///home/realist/Pictures, file:///home/realist/Music/Amorphis/Skyforger, file:///home/realist/Videos, file:///home/realist/Videos/Fallout, file:///home/realist/Videos/Chernobyl
+lastVisited=file:///home/realist/Videos
 qtVersion=5.15.14
 shortcuts=file:, file:///home/realist
 sidebarWidth=118
