--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -217,8 +217,8 @@ bind = $mainMod CTRL, down, workspace, empty
 bind = , XF86MonBrightnessUp, exec, brightnessctl -q s +10%
 bind = , XF86MonBrightnessDown, exec, brightnessctl -q s 10%-
 
-bind = , XF86AudioRaiseVolume, exec, wpctl set-sink-volume @DEFAULT_SINK@ +5%
-bind = , XF86AudioLowerVolume, exec, wpctl set-sink-volume @DEFAULT_SINK@ -5%
+bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 1%+
+bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
 bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
 bind = , XF86AudioPlay, exec, playerctl play-pause
@@ -227,7 +227,12 @@ bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
 bind = , XF86Lock, exec, hyprlock
-bind = , XF86Tools, exec, kitty
+bind = , XF86Tools, exec, audacious
+bind = , XF86Explorer, exec, kitty
+bind = , XF86Calculator, exec, pcmanfm
+bind = , XF86WWW, exec, firefox
+bind = , XF86Mail, exec, qtox
+
 
 # Environment for xdg-desktop-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
