--- a/.config/QtProject.conf
+++ b/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/realist/Pictures, file:///home/realist/Music/Amorphis/Skyforger, file:///home/realist/Videos, file:///home/realist/Videos/Fallout, file:///home/realist/Videos/Chernobyl
-lastVisited=file:///home/realist/Videos
+history=file:///home/realist/Videos, file:///home/realist/Videos/Fallout, file:///home/realist/Videos/Chernobyl, file:///home/realist/Downloads/Torrents, file:///home/realist/Music/Amorphis/Tales from the Thousand Lakes  Black Winter Day, file:///home/realist/Music
+lastVisited=file:///home/realist/Music
 qtVersion=5.15.14
 shortcuts=file:, file:///home/realist
 sidebarWidth=118
